<resources>
    <string name="app_name">fredol</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_maps_api_key">AIzaSyBsSun9kc0Ki1ddVwboJkP6GNpwe4lc4Bk</string>
    <string name="cine_url">https://opendata.paris.fr/explore/dataset/cinemas-a-paris/download/?format=json</string>
    <string name="ExplicationDonnée">Explication</string>
    <string name="Sources">Sources</string>
    <string name="Librairiesetlicences">Libs et licences</string>
    <string name="Credits">Credits</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
